--- a/index.html
+++ b/index.html
@@ -1,32 +1,54 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Lunch Checker</title>
+    <title>Shopping List Check Off</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <style>
-      .message { font-size: 1.3em; font-weight: bold; }
+      .emptyMessage {
+        font-weight: bold;
+        color: red;
+        font-size: 1.2em;
+      }
+      li {
+        margin-bottom: 7px;
+        font-size: 1.2em;
+      }
+      li > button {
+        margin-left: 6px;
+      }
+      button > span {
+        color: green;
+      }
     </style>
   </head>
-<body ng-app="LunchCheck">
-   <div class="container" ng-controller="LunchCheckController">
-     <h1>Lunch Checker</h1>
+<body ng-app="ShoppingListCheckOff">
+  <div class="container">
+  <h1>Shopping List Check Off</h1>
 
-         <div class="form-group">
-             <input id="lunch-menu" type="text"
-             ng-model="lunchMenu" placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
-			 <p>We do NOT consider and empty item, i.e., , , as an item towards to the count.</p>
-         </div>
-         <div class="form-group">
-             <button class="btn btn-default" ng-click="onCheck()">Check If Too Much</button>
-         </div>
-         <div class="form-group message">
-           <!-- Your message can go here. -->
-		   {{message}}
-         </div>
-   </div>
-<script type="text/javascript" src="js/angular.min.js"> </script>
-<script type="text/javascript" src="js/app.js"> </script>
+  <div class="row">
+
+    <!-- To Buy List -->
+    <div class="col-md-6" ng-controller="ToBuyController as toBuy">
+     <h2>To Buy:</h2>
+     <ul >
+       <li ng-repeat="toBuyList in toBuy.toBuyList">Buy {{toBuyList.quantity}} {{toBuyList.name}} <button ng-click="toBuy.buyItem($index)" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
+     </ul>
+     <div ng-if="!toBuy.toBuyList.toString()" class="emptyMessage">Everything is bought!</div>
+    </div>
+
+    <!-- Already Bought List -->
+    <div class="col-md-6" ng-controller="AlreadyBoughtController as alreadyBought">
+     <h2>Already Bought:</h2>
+     <ul>
+       <li ng-repeat="alreadyBoughtList in alreadyBought.alreadyBoughtList">Bought {{alreadyBoughtList.quantity}} {{alreadyBoughtList.name}}</li>
+     </ul>
+     <div ng-if="!alreadyBought.alreadyBoughtList.toString()" class="emptyMessage">Nothing bought yet.</div>
+    </div>
+  </div>
+</div>
+
 </body>
+<script src="js/angular.min.js"></script>
+<script src="js/app.js"></script>
 </html>
