--- a/index.html
+++ b/index.html
@@ -1,54 +1,28 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Shopping List Check Off</title>
+    <title>Narrow Down Your Menu Choice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <style>
-      .emptyMessage {
-        font-weight: bold;
-        color: red;
-        font-size: 1.2em;
-      }
-      li {
-        margin-bottom: 7px;
-        font-size: 1.2em;
-      }
-      li > button {
-        margin-left: 6px;
-      }
-      button > span {
-        color: green;
-      }
-    </style>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
-<body ng-app="ShoppingListCheckOff">
-  <div class="container">
-  <h1>Shopping List Check Off</h1>
+<body ng-app="NarrowItDownApp">
+   <div class="container" ng-controller="NarrowItDownController as narrowList">
+    <h1>Narrow Down Your Chinese Menu Choice</h1>
 
-  <div class="row">
-
-    <!-- To Buy List -->
-    <div class="col-md-6" ng-controller="ToBuyController as toBuy">
-     <h2>To Buy:</h2>
-     <ul >
-       <li ng-repeat="toBuyList in toBuy.toBuyList">Buy {{toBuyList.quantity}} {{toBuyList.name}} <button ng-click="toBuy.buyItem($index)" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-     </ul>
-     <div ng-if="!toBuy.toBuyList.toString()" class="emptyMessage">Everything is bought!</div>
+    <div class="form-group">
+      <input type="text" ng-model="narrowList.searchTerm" placeholder="search term" class="form-control">
+    </div>
+    <div class="form-group narrow-button">
+      <button ng-click="narrowList.searchMenu()" class="btn btn-primary">Narrow It Down For Me!</button>
     </div>
 
-    <!-- Already Bought List -->
-    <div class="col-md-6" ng-controller="AlreadyBoughtController as alreadyBought">
-     <h2>Already Bought:</h2>
-     <ul>
-       <li ng-repeat="alreadyBoughtList in alreadyBought.alreadyBoughtList">Bought {{alreadyBoughtList.quantity}} {{alreadyBoughtList.name}}</li>
-     </ul>
-     <div ng-if="!alreadyBought.alreadyBoughtList.toString()" class="emptyMessage">Nothing bought yet.</div>
-    </div>
+    <!-- found-items should be implemented as a component -->
+    
+	<found-items  on-remove="....">  </found-items>
+	
   </div>
-</div>
-
-</body>
 <script src="js/angular.min.js"></script>
 <script src="js/app.js"></script>
+</body>
 </html>
