--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html ng-app='MenuApp'>
   <head>
-    <title>Narrow Down Your Menu Choice</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <meta charset="utf-8">
+    <!--<link rel="stylesheet" href="css/styles.css"> -->
+    <title>No Cookie Shopping List</title>
   </head>
-<body ng-app="NarrowItDownApp">
-   <div class="container" ng-controller="NarrowItDownController as narrowList">
-    <h1>Narrow Down Your Chinese Menu Choice</h1>
+  <body>
+    <h1>Welcome to our Restaurant </h1>
 
-    <div class="form-group">
-      <input type="text" ng-model="narrowList.searchTerm" placeholder="search term" class="form-control">
-    </div>
-    <div class="form-group narrow-button">
-      <button ng-click="narrowList.searchMenu()" class="btn btn-primary">Narrow It Down For Me!</button>
-    </div>
+    <ui-view ng-app="data"></ui-view>
 
-    <!-- found-items should be implemented as a component -->
-    
-	<found-items  on-remove="....">  </found-items>
-	
-  </div>
-<script src="js/angular.min.js"></script>
-<script src="js/app.js"></script>
-</body>
+
+
+    <!-- Libraries -->
+    <script src="lib/angular.js"></script>
+    <script src="lib/angular-ui-router.js"></script>
+
+    <!-- Modules -->
+    <script src="src/restaurantmenu/data.module.js"></script>
+    <script src="src/restaurantmenu/menuapp.module.js"></script>
+
+    <!-- Routes -->
+    <script src="src/routes.js"></script>
+
+    <!-- 'ShoppingList' module artifacts -->
+    <script src="src/restaurantmenu/category.component.js"></script>
+    <script src="src/restaurantmenu/items.component.js"></script>
+    <script src="src/restaurantmenu/main-MenuApp.controller.js"></script>
+    <script src="src/restaurantmenu/item-detail.controller.js"></script>
+    <script src="src/restaurantmenu/menudata.service.js"></script>
+
+  </body>
 </html>
