--- a/src/public/home/signupform.html
+++ b/src/public/home/signupform.html
@@ -44,7 +44,7 @@
     </span>
   </div>
   <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Menu Number :</label>
+    <label for="inputPassword3" class="col-sm-2 control-label">Favorite Choice Menu Number :</label>
     <div class="col-sm-6">
       <input type="text" name="menuno" ng-model="signup.menu.short_name" required  class="form-control" placeholder="Enter Menu Number">
     </div>
